# 114205

./: .gitignore  AfterLogin.html  CancelOrder.html  Charging.html  ChefAfterLogin - 複製.html  ChefAfterLogin.html  ChefLogin.html  ChefLoginSecond  copy.html  ChefLoginSecond .html  ChefMain.html  ChefOrder.html  ChefRegister.html  ChefRegister2.html  ChefRegisterSecond.html  ChefUnOrder.html  CookingMethod.html  CusLogin.html  CusRegister.html  CustomerLogin.html  CustomerRegister.html  DATABASE_SCHEMA.md  Login.html  MIGRATION_SUMMARY.md  NotLogin.html  ORDER_FIX_SUMMARY.md  Order.html  Order1.html  OrderDone.html  OrderPrice.html  OrderfinalPrice.html  OrderfinalPrice1.html  PriceRules.html  QUICK_START.md  RESELECT_CHEF_SUMMARY.md  REVIEW_FEATURE_SUMMARY.md  Register.html  SearchChef.html  TEST.html  approve_special_needs.py  chatbot_test.py  (+37 more)
114205-flask/: 114205_DB.sql  app.py  cursor_flask_114205.md
css/: ALmenu - 複製.css  ALmenu.css  ALmenuChef.css  CancelOrder.css  Charging.css  ChefLogin.css  ChefMain.css  ChefOrder.css  ChefRegister.css  ChefRegister2.css  ChefUnOrder.css  CusLogin.css  CusRegister.css  CutomerLogin.css  CutomerRegister.css  Login.css  NLogin.css  Order.css  Order1.css  OrderDone.css  OrderfinalPrice.css  OrderfinalPrice1.css  Register.css  SearchChef.css  cookingMethod.css  evaluate.css  my-order.css  notification.css  orderDetail.css  orderDetail2.css  orderDetail3.css  reserve.css  reserve2-change.css  reserve2.css  reserve3.css  reserve4.css
models/: __init__.py  chef.py  message.py  notification.py  order.py  review.py  user.py
(+136 files in other folders)
